static/style.css
/* 
 * Some bits borrowed from
 * http://meyerweb.com/eric/tools/css/reset/ 
 * v2.0 | 20110126
 */

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
  display: block;
}

/* General styles */
a {
  color: #000;
  font-weight: 400;
  text-decoration: none;
}
a:hover {
  color: #C00;
} 
body {
  background: black;
  color: white;
  font-family: Roboto, Arial, sans-serif;
  font-weight: 300;
  line-height: 1;
}
img {
  max-width: 100%;
}
ol, ul {
  list-style: none;
}
blockquote, q {
  quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}
.alt-text {
  display: none;
}

/* Header */
header {
  margin: 0 auto;
  max-width: 960px;
}
.search {
  float: right;
}
.search form {
  position: relative;
  top: 22px;
}
.search input {
  border: 1px solid black;
  padding: 1px 2px;
  width: 250px;
}
.header-container {
  background: url('/static/images/header-bg.png') 50% 0% no-repeat;
  padding: 0 0 3px 0;
}
.header-fill {
  height: 30px;
  border-bottom: 1px solid #fff;
}

/* Head */
.head {
  margin: 0 auto;
  max-width: 960px;
  overflow: auto;
}
.subicon {
  background: url('/static/images/subicons.png') no-repeat;
  background-size: 188px 120px;
  height: 60px;
  width: 60px;
}
.mag .subicon {
  background-position: -128px -60px;
}
.mag .subicon:hover {
  background-position: -128px 0px;
}
.mag-logo {
  background: url('/static/images/mag-logo.png') no-repeat;
  float: right;
  height: 178px;
  width: 753px;
}
.sub {
  float: left;
  margin: 60px 0 0 0;
  text-align: center;
  width: 210px;
}
.sub .subicon {
  margin: 16px auto;
}
.ta .subicon {
  background-position: 0px -60px;
  height: 60px;
  width: 68px;
}
.ta .subicon:hover {
  background-position: 0px 0px;
}
.wf-logo {
  background: url('/static/images/wf-logo.png') no-repeat;
  background-size: 220px 220px;
  float: left;
  height: 220px;
  width: 220px;
  margin: 10px 38px 0 0;
}
.wf-logo-smaller {
  background: url('/static/images/wf-logo.png') no-repeat;
  background-size: 100px 100px;
  float: left;
  height: 100px;
  width: 100px;
  margin: 60px 38px 20px 0;
}
.wgxc .subicon {
  background-position: -68px -60px;
}
.wgxc .subicon:hover {
  background-position: -68px 0px;
}
.wgxc-logo {
  background: url('/static/images/wgxc-logo.png') no-repeat;
  height: 206px;
  width: 755px;
  margin-left: 68px;
  position: absolute;
  top: 4px;
}

/* Primary nav */
nav.primary {
  border-top: 1px solid black;
  border-bottom: 1px solid black;
  font-size: 16px;
  margin: 2px 0 0 0;
  min-width: 960px;
  padding: 5px 0;
  text-align: center;
}
nav.primary a {
  color: black;
}
nav.primary a:hover {
  color: white;
}
nav.mag {
  background: #6dcff6;
}
nav.ta {
  background: #ffcd32;
}
nav.wgxc {
  background: #6fb43f;
}

/* Tweets */
.tweets-container {
  background: #FBF9FA;
}
.tweets {
  font-size: 12px;
  margin: auto;
  overflow: hidden;
  padding: 6px 0;
  white-space: nowrap;
  width: 960px;
}
.tweet {
  display: none;
}
.tweets a.twitter {
  background: url('/static/images/socialicons.png') no-repeat;
  display: inline-block;
  margin: 0 8px -4px;
  height: 19px;
  width: 19px;
}
.tweets a.twitter span {
  display: none;
}

/* Footer */
footer {
  font-weight: 400;
  margin: 0 auto;
  max-width: 960px;
}
footer a {
  color: #b3b2b2;
}
footer a:hover {
  color: #525151;
}
footer nav {
  font-size: 20px;
  padding: 20px 0;
}
footer nav a {
  padding: 0 5px;
}
nav.wf1 {
  float: left;
}
nav.wf2 {
  float: right;
}
.copyright {
  color: #525151;
}
.copyright:hover {
  color: #525151;
}
.fineprint {
  float: left;
  padding: 24px 0 0 0;
  font-size: 11px;
}
.fineprint a {
  padding: 0 5px;
}
.footer-container {
  padding: 3px 0 0 0;
}
.footer-fill {
  background: url('/static/images/footer-bg.png') no-repeat;
  background-position: 50% 6px;
  height: 109px;
  border-top: 1px solid #eee;
}
.social {
  float: left;
  padding: 18px 0 0 20px;
}
.social a {
  background: url('/static/images/socialicons.png') no-repeat;
  display: inline-block;
  height: 19px;
  width: 19px;
}
.social a span {
  display: none;
}
.social .facebook {
  background-position: -19px 0px;
  margin-left: 5px;
}
.social .mailing {
  background-position: -57px 0px;
  margin-left: 15px;
  width: 150px;
}
.studio-info {
  color: #999;
}
.studios {
  clear: both;
  float: right;
  font-size: 11px;
  text-align: right;
}

/* Listen slider */
.listen {
  background: black;
  color: white;
  left: -20px;
  padding: 5px 30px 5px 0;
  position: absolute;
  top: 70px;
  width: 300px;
}
.listen h1 {
  font-size: 20px;
  padding: 10px 0 20px 0;
}
.listen-handle {
  background: black;
  font-size: 18px;
  position: absolute;
  width: 400px;
  text-align: center;
  top: 0;
  left: -74px;
  z-index: 0;
  /* Rotate from http://css-tricks.com/snippets/css/text-rotation/ */
  /* Safari */
  -webkit-transform: rotate(-90deg);
  /* Firefox */
  -moz-transform: rotate(-90deg);
  /* IE */
  -ms-transform: rotate(-90deg);
  /* Opera */
  -o-transform: rotate(-90deg);
  /* Rotate from top left corner (not default) */
  -webkit-transform-origin: bottom right;
  -moz-transform-origin:    bottom right;
  -ms-transform-origin:     bottom right;
  -o-transform-origin:      bottom right;
}
.listen, .listen-wgxc, .listen-wf {
  /* From http://css-tricks.com/almanac/properties/b/border-radius/ */
  /* Safari 3-4, iOS 1-3.2, Android 1.6- */
  -webkit-border-radius: 12px;
  /* Firefox 1-3.6 */
  -moz-border-radius: 12px;
  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
  border-radius: 12px;
}
.listen-wf, .listen-wgxc {
  background: white;
  color: black;
  margin: 10px 0;
  padding: 10px 5px 10px 25px;
}
.listen-wf div, .listen-wgxc div {
  font-size: 18px;
}

/* Main content area */
.main {
  margin: 0 auto;
  max-width: 960px;
}
.main-container {
  background: #f4f1f1;
  color: #000;
  overflow: auto;
  padding: 2px 0 20px 0;
}

/* Slideshow */
.pointer {
  border-top: 0px solid transparent;
  border-left: 15px solid transparent;
  border-right: 15px solid transparent;
  border-bottom: 20px solid black;
  height: 0;
  left: 348px;
  position: relative;
  width: 0; 
}
.slideshow {
  border: 1px solid black;
  float: left;
  margin: 0 0 0 60px;
  position: relative;
  text-align: right;
}
.slideshow a {
  display: block;
  height: 428px;
  width: 760px;
}
.slideshow div {
  font-weight: 400;
  padding: 4px 5px;
  position: absolute;
  right: 0px;
}
.slide-credit {
  background: rgba(256, 256, 256, .8);
  color: #000;
  bottom: 22px;
  font-size: 10px;
}
.slide-title {
  background: rgba(0, 0, 0, .7);
  bottom: 0px;
  color: #fff;
  font-size: 14px;
  width: 750px;
}
a.wgxc.slide, a.mag.slide {
  display: none;
}

/* Pages */
.page {
  font-size: 18px;
  line-height: 22px;
  width: 760px;
  margin: 0 0 0 60px;
  padding: 40px 0;
}
.page h1 {
  border-bottom: 2px solid black;
  font-size: 32px;
  margin: 60px 0 40px 0;
  padding: 0 0 10px 0;
}
.page h2 {
  font-size: 20px;
  font-weight: 400;
  margin: 30px 0 10px 0;
}
.page i {
  font-style: italic;
}
.page p {
  margin: 5px 0 10px 0;
}
.page .answer {
}
.page .biglink {
  font-size: 28px;
  margin: 30px 0;
}
.page dl.qa {
  margin: 0 0 10px;
}
.page dl.qa dd {
  color: #777;
}
.page dl.qa dd a {
  color: #555;
}
.page dl.qa dd a:hover {
  color: #C00;
} 
.page dl.qa dd ul {
  margin: 0 0 0 1em;
}

/* WGXC pages */
/* TODO Split out subsite styles into their own CSS/LESS */
.page.wgxc a:hover {
  color: #1AB7EA;
}
.page.split {
  margin: 0 40px 0 0;
  width: 640px;
  float: right;
}
.side {
  float: left;
  margin: 0 0 0 40px;
  padding: 140px 0 40px 0;
  width: 200px;
}
.side h3 {
  color: #6fb43f;
  font-family: Roboto, Arial, sans-serif;
  font-size: 22px;
  font-weight: bold;
  margin: 20px 0 10px 0;
}
.side.wgxc a:hover {
  color: #1AB7EA;
}

/* WGXC Schedule */
.schedule {
  margin-top: 40px;
}
.day {
  clear: both;
  margin: 0 0 40px;
  overflow: auto;
}
.calendar-card-topbar {
  background-color: #096E8C;
  border-radius: 8px 8px 0 0;
  height: 12px;
  width: 120px;
}
.calendar-card {
  background-color: #1AB7EA;
  border-radius: 8px;
  color: #fff;
  float: left;
  font-weight: 400;
  text-align: center;
  width: 120px;
}
.calendar-card .weekday {
  font-size: 12px;
  margin: 6px 0 0 0;
}
.calendar-card .monthday {
  font-size: 48px;
  margin: 10px 0 40px;
}
.broadcast-list {
  border-bottom: 2px solid #bbb;
  margin-left: 200px;
  padding: 0 0 30px;
}
.broadcast-time {
  float: left;
  text-align: right;
  width: 80px;
}
.broadcast-info {
  border-left: 1px dashed #000;
  margin-left: 100px;
  padding: 0 0 20px 20px;
}
.show-name {
  font-size: 22px;
}
.show-name span {
  cursor: pointer;
}
.broadcast-name {
  padding: 0 0 15px;
}
.broadcast-name span {
  cursor: pointer;
}
.broadcast-description {
  display: none;
}
.broadcast-description.current {
  display: block;
}
.more {
  text-align: center;
}
.more input {
  background-color: #1AB7EA;
  border: 1px solid #1AB7EA;
  border-radius: 8px;
  color: #fff;
  cursor: pointer;
  font-size: 20px;
  padding: 10px 40px;
}

/* Programs page */
a.programs-header {
  color: black;
  display: block;
}
a.programs-header:hover {
  color: black;
}
.programs-icon {
  background-repeat: no-repeat;
  background-size: contain;
  position: absolute;
  height: 45px;
  margin: -10px 0 0 -70px;
  width: 45px;
}
.ta.programs-header .programs-icon {
  background-image: url('/static/images/ta-icon-light.png');
  margin-left: -72px;
  width: 50px;
}
.ta.programs-header:hover .programs-icon {
  background-image: url('/static/images/ta-icon.png');
}
.wgxc.programs-header .programs-icon {
  background-image: url('/static/images/wgxc-icon-light.png');
}
.wgxc.programs-header:hover .programs-icon {
  background-image: url('/static/images/wgxc-icon.png');
}
.mag.programs-header .programs-icon {
  background-image: url('/static/images/mag-icon-light.png');
}
.mag.programs-header:hover .programs-icon {
  background-image: url('/static/images/mag-icon.png');
}

